<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_board"
        android:icon="@drawable/ic_board"
        android:title="@string/title_board" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_matching"
        android:icon="@drawable/ic_face"
        android:title="@string/title_matching" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_setting" />
</menu>